welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:18: error: not enough arguments for method lireColonne: (taille: Int)Array[java.awt.Color].
Unspecified value parameter taille.
  lireColonne()
             ^Array1:29: error: not found: value T
    setCouleurBrosse(T[j])
                     ^Array1:29: error: not found: type j
    setCouleurBrosse(T[j])
                       ^